# fs-assemble

./: .gitignore  Cargo.toml
documentation/: readme.md
examples/: 01-build.fsas
scripts/: z-run
sources/: bin.rs  debug.rs  executer.rs  filters.rs  helpers.rs  indexer.rs  lib.rs  macros.rs  main.rs  parser.rs  planner.rs  prelude.rs  rule_helpers.rs  rules.rs  settings.rs  tools.rs
