
[package]
name = "fs-assemble"
version = "0.0.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2018"

[features]
default = []

[dependencies]
regex = "*"
globset = "*"
walkdir = "*"

[[bin]]
name = "fs-assemble"
path = "./sources/bin.rs"

[lib]
name = "fs_assemble"
path = "./sources/lib.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
panic = "abort"

